add stile for SinglRoom

--- a/access-system/access-system.csproj
+++ b/access-system/access-system.csproj
@@ -64,6 +64,12 @@
     <Compile Include="RoomForm.Designer.cs">
       <DependentUpon>RoomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SingleRoom.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SingleRoom.Designer.cs">
+      <DependentUpon>SingleRoom.cs</DependentUpon>
+    </Compile>
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RoomForm.resx">
       <DependentUpon>RoomForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SingleRoom.resx">
+      <DependentUpon>SingleRoom.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
