--- a/access-system/access-system.csproj
+++ b/access-system/access-system.csproj
@@ -64,6 +64,12 @@
     <Compile Include="RoomForm.Designer.cs">
       <DependentUpon>RoomForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SecurityPostForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SecurityPostForm.Designer.cs">
+      <DependentUpon>SecurityPostForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SingleRoom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="RoomForm.resx">
       <DependentUpon>RoomForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SecurityPostForm.resx">
+      <DependentUpon>SecurityPostForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SingleRoom.resx">
       <DependentUpon>SingleRoom.cs</DependentUpon>
