--- a/access-system/access-system.csproj
+++ b/access-system/access-system.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +58,12 @@
     </Compile>
     <Compile Include="CardCreationForm.Designer.cs">
       <DependentUpon>CardCreationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EmulateEntranceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmulateEntranceForm.Designer.cs">
+      <DependentUpon>EmulateEntranceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="LockingCardForm.cs">
       <SubType>Form</SubType>
@@ -101,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CardCreationForm.resx">
       <DependentUpon>CardCreationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmulateEntranceForm.resx">
+      <DependentUpon>EmulateEntranceForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LockingCardForm.resx">
       <DependentUpon>LockingCardForm.cs</DependentUpon>
