--- a/access-system.Utils/access-system.Utils.csproj
+++ b/access-system.Utils/access-system.Utils.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildingAndComponents\AccesMode.cs" />
+    <Compile Include="BuildingAndComponents\Room.cs" />
     <Compile Include="ElectronicPass.cs" />
     <Compile Include="Enums\PassBlocking.cs" />
     <Compile Include="Enums\RoomTypes.cs" />
@@ -56,6 +58,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
