--- a/access-system.Utils/access-system.Utils.csproj
+++ b/access-system.Utils/access-system.Utils.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BuildingAndComponents\AccesMode.cs" />
     <Compile Include="BuildingAndComponents\Lock.cs" />
+    <Compile Include="BuildingAndComponents\LockCreator.cs" />
     <Compile Include="BuildingAndComponents\Room.cs" />
     <Compile Include="ElectronicPass.cs" />
     <Compile Include="Enums\PassBlocking.cs" />
