Add floor buttons for building

--- a/access-system/access-system.csproj
+++ b/access-system/access-system.csproj
@@ -152,6 +152,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\access-system.Utils\access-system.Utils.csproj">
+      <Project>{84112096-1445-4bde-bcd4-9c4aacc25ce3}</Project>
+      <Name>access-system.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
