--- a/access-system.Utils/access-system.Utils.csproj
+++ b/access-system.Utils/access-system.Utils.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BuildingAndComponents\LockCreator.cs" />
     <Compile Include="BuildingAndComponents\LogsEntry.cs" />
     <Compile Include="BuildingAndComponents\Room.cs" />
+    <Compile Include="BuildingAndComponents\SecurityPost.cs" />
     <Compile Include="BuildingAndComponents\VisitingLogs.cs" />
     <Compile Include="ElectronicPass.cs" />
     <Compile Include="Enums\PassBlocking.cs" />
