Add validation for input floors and rooms

--- a/access-system.Utils/access-system.Utils.csproj
+++ b/access-system.Utils/access-system.Utils.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Readers\IReader.cs" />
     <Compile Include="Readers\JsonReader.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
