--- a/access-system/access-system.csproj
+++ b/access-system/access-system.csproj
@@ -139,7 +139,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -154,6 +153,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\access-system.Presenters\access-system.Presenters.csproj">
+      <Project>{648db0f2-25ee-409b-aa0d-7502f21f66cf}</Project>
+      <Name>access-system.Presenters</Name>
+    </ProjectReference>
     <ProjectReference Include="..\access-system.Utils\access-system.Utils.csproj">
       <Project>{84112096-1445-4bde-bcd4-9c4aacc25ce3}</Project>
       <Name>access-system.Utils</Name>
