--- a/access-system.Services/access-system.Services.csproj
+++ b/access-system.Services/access-system.Services.csproj
@@ -43,6 +43,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\access-system.Entities\access-system.Entities.csproj">
+      <Project>{8a3a4f3a-a31c-463f-8f46-2227f24417c4}</Project>
+      <Name>access-system.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\access-system.IRepositories\access-system.IRepositories.csproj">
+      <Project>{263b7585-1183-454d-ad7d-6b194f0334e4}</Project>
+      <Name>access-system.IRepositories</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\access-system.IServices\access-system.IServices.csproj">
+      <Project>{7eb4261c-7f00-4f39-aa84-b6c7e9c00dbc}</Project>
+      <Name>access-system.IServices</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
