--- a/access-system.Services/access-system.Services.csproj
+++ b/access-system.Services/access-system.Services.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuildingService.cs" />
+    <Compile Include="LockCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StartService.cs" />
   </ItemGroup>
